--- a/TODO
+++ b/TODO
@@ -1,24 +1,5 @@
-Examinatorn avgör om jag är kvalificerad
-
-Examinator:
-Jörn Janneck
-Kalle Åström
-
-Handledare:
-Michael Doggett
-
-Koordinator:	Flavius
-Studierektor:	Roger Henriksson
-
-Anmälan - Examensarbete
-* Examensarbetets preliminära svenska titel
-
-
-"Kontaktinformation till extern handledare"
+Skriv ut båda blanketterna och lämna in
+Prata med Jörn Janneck och Mike
 
 Skriv måldokument (en preliminär projektplan)
-
-Skaffa någonstans att bo
-Skriv på Ericsson-kontrakt
-
-Skriv rapport, Presentera och opponera
+Skriv rapport, presentera och opponera
