goal document turned in

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
-Skriv ut båda blanketterna och lämna in
-Prata med Jörn Janneck och Mike
+Lämna in in Anmälan till exjobb-blanketten
 
 Skriv måldokument (en preliminär projektplan)
 Skriv rapport, presentera och opponera
